connect and disconnect css fixed (w/ werid overflow issue)

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -4,6 +4,8 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  overflow-x:hidden;
+  overflow-y:hidden;
 }
 
 .logo {
